fix: subscribe dao
